tests/syntax/bad/testfile-expr24-1.scala
class A {
    def m() { var i == i ; }
}
object Main { def main(args: Array[String]) { } }
